// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-section-notice Attention message 1`] = `
<section
  aria-labelledby="section-notice-attention"
  aria-roledescription="Notice"
  class="section-notice section-notice--attention"
  role="region"
>
  <div
    class="section-notice__header"
    id="section-notice-attention"
  >
    <svg
      aria-hidden="true"
      class="icon icon--attention-filled"
      focusable="false"
      height="24px"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-attention-filled"
      />
    </svg>
  </div>
  <div
    class="section-notice__main"
  >
    <p>
      <strong>
        Error.
      </strong>
       Please take another look at the following:
      <br />
      <a
        href="http://www.ebay.com"
      >
        Card number
      </a>
      ,
      <a
        href="http://www.ebay.com"
      >
        Expiration date
      </a>
       &
      <a
        href="http://www.ebay.com"
      >
        Security code
      </a>
      .
    </p>
  </div>
</section>
`;

exports[`Storyshots ebay-section-notice Confirmation message 1`] = `
<section
  aria-labelledby="section-notice-confirmation"
  aria-roledescription="Notice"
  class="section-notice section-notice--confirmation"
  role="region"
>
  <div
    class="section-notice__header"
    id="section-notice-confirmation"
  >
    <svg
      aria-hidden="true"
      class="icon icon--confirmation-filled"
      focusable="false"
      height="24px"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-confirmation-filled"
      />
    </svg>
  </div>
  <div
    class="section-notice__main"
  >
    <p>
      This successfully finished 
      <a
        href="http://www.ebay.com"
      >
        next page
      </a>
    </p>
  </div>
  <div
    class="section-notice__footer"
  >
    <button
      class="btn btn--transparent btn--secondary"
    >
      Button
    </button>
  </div>
</section>
`;

exports[`Storyshots ebay-section-notice Default message (with action) 1`] = `
<section
  aria-roledescription="Notice"
  class="section-notice"
  role="region"
>
  <div
    class="section-notice__main"
  >
    <p>
      Items you didn't win will now show in the 
      <a
        href="http://www.ebay.com"
      >
        Didn't win
      </a>
       section of this page.
    </p>
  </div>
  <div
    class="section-notice__footer"
  >
    <button
      class="btn btn--transparent btn--secondary"
    >
      Button
    </button>
  </div>
</section>
`;

exports[`Storyshots ebay-section-notice Default message (with no action) 1`] = `
<section
  aria-roledescription="Notice"
  class="section-notice"
  role="region"
>
  <div
    class="section-notice__main"
  >
    <p>
      Items you didn't win will now show in the 
      <a
        href="http://www.ebay.com"
      >
        Didn't win
      </a>
       section of this page.
    </p>
  </div>
</section>
`;

exports[`Storyshots ebay-section-notice Information message 1`] = `
<section
  aria-labelledby="section-notice-information"
  aria-roledescription="Notice"
  class="section-notice section-notice--information"
  role="region"
>
  <div
    class="section-notice__header"
    id="section-notice-information"
  >
    <svg
      aria-hidden="true"
      class="icon icon--information-filled"
      focusable="false"
      height="24px"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-information-filled"
      />
    </svg>
  </div>
  <div
    class="section-notice__main"
  >
    <p>
      <strong>
        Good news!
      </strong>
       You get free shipping on your next pair of shoes! 
      <a
        href="http://www.ebay.com"
      >
        Learn more
      </a>
      .
    </p>
  </div>
  <div
    class="section-notice__footer"
  >
    <button
      class="btn btn--transparent btn--secondary"
    >
      Button
    </button>
  </div>
</section>
`;

exports[`Storyshots ebay-section-notice Section with footer 1`] = `
<section
  aria-roledescription="Notice"
  class="section-notice"
  role="region"
>
  <div
    class="section-notice__main"
  >
    <h2
      class="section-notice__title"
    >
      Title
    </h2>
    <p>
      Items you didn't win will now show in the 
      <a
        href="http://www.ebay.com"
      >
        Didn't win
      </a>
       section of this page.
    </p>
  </div>
  <div
    class="section-notice__footer"
  >
    <a
      class="fake-btn fake-btn--secondary"
      href="https://www.ebay.com"
    >
      Action
    </a>
  </div>
</section>
`;

exports[`Storyshots ebay-section-notice Section with title 1`] = `
<section
  aria-roledescription="Notice"
  class="section-notice"
  role="region"
>
  <div
    class="section-notice__main"
  >
    <h2
      class="section-notice__title"
    >
      Title
    </h2>
    <p>
      Items you didn't win will now show in the 
      <a
        href="http://www.ebay.com"
      >
        Didn't win
      </a>
       section of this page.
    </p>
  </div>
</section>
`;
